Remove need for separate HierarchicalLayout subclass